classDiagram
    class Content {
        +string slug  %% PK

        +string title
        +text blurb
        +text description
        +text eyebrow
        +text body
        +text enrollment
        +text instructions
        +text cta_label
        +map<string,string> other_content
        +string image

        +string source
        +string for
        +number rank
        +string renderers
        +string comment

        +map<string,string> data
    }
    

    class Page {

    }

    Content <|-- Page

    class Class {
        +string price
        +string grade
        +string day
        +string level        
        +string times
        +string location_code
        +string start_date
        +string end_date
        +string enrollment_opens
        +string enrollment_closes
        +boolean active
        +string schedule_link
        +string enroll_link
        +string curriculum_link
        +string proto
        +string color

        +string program
        +string track
        +string subject
        +string category
        +list< Topic > topics

        +list< Enrollment > enrollments
        +list< CTA > ctas

        +Content content

    }

 
    
    class Enrollment {
        +string slug  %% PK

        +string: enrollment_component

        +Content content
        +CTA cta
    }

    class CTA {
        +string slug  %% PK 
        +string title
        +text blurb
        +text description
        +text eyebrow
        +text cta_label

        +string type
        +string url
    }


    class Announcement {
        +string from
        +string until
        +string link 
        +Content content
    }

    
    %% Many-to-Many
    Class "*" --> "*" Category : categories
    Class "*" --> "*" Topic : topics
    Class "*" --> "*" CTA : cta
    Class "*" --> "*" Enrollment : enrollments

    Class "*" --> "*" Program : programs

    %% One-to-One
    Class "1" --> "1" Content : content
    Enrollment "1" --> "1" Content : content

    
